tests/fixtures/errors/ci/src/Admin.elm
module Admin exposing (main)

import Html
import Shared


main =
    Html.text Shared.greet "Admin"
